syntax = "proto3";

package brew.go.proto.user;
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "github.com/omkarbhostekar/brewgo/proto/gen";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users/create"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags: ["User"]
            summary: "Create a new user"
            description: "Use this API to create a new user."
        };
    }
}

message CreateUserRequest {
    string name = 1;
    string phone_number = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message User {
    string name = 1;
    string phone_number = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}